# obsidian-extract-url

./: .gitignore  Cargo.toml  README.md  configure_iframe_modal.ts  iframe_converter.ts  index.js  jest.config.js  main.js  main.js.map  main.ts  manifest.json  package-lock.json  package.json  regex.ts  rollup.config.js  shim.js  styles.css
__tests__/: iframe_converter.spec.ts  regex.spec.ts
html-readability/: index.js  regexHelper.js  util.js
src/: archive.rs  electron.rs  extract.rs  fetch.rs  lib.rs  obsidian.rs  request.rs  settings.rs  shim.rs  transform.rs
src/transform/: github.rs  mod.rs  oembed.rs
src/transform/oembed/: metadata.rs
