[package]
name = "obsidian-rust-plugin"
version = "0.1.0"
authors = ["Stephen Solka <solka@angel.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.22"
js-sys = "0.3.49"
url = "1"
html2md = "0.2.10"

[dependencies.readability]
version = "^0"
default-features = false

[dependencies.web-sys]
version = "0.3.49"
features = [
  'Window',
]