[package]
name = "obsidian-rust-plugin"
version = "0.1.0"
authors = ["Stephen Solka <solka@angel.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.22"
js-sys = "0.3.49"
url = "1"
html2md = "0.2.10"
thiserror = "1.0.24"
frontmatter = "^0.4"
yaml-rust = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3.14"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"

[dependencies.readability]
git = "https://github.com/trashhalo/readability.git"
version = "^0"
default-features = false

[dependencies.web-sys]
version = "0.3.49"
features = [
  'Window',
  'console'
]
